# BookRecall

./: .gitignore  AGENT_STATUS.md  README.md  bookrecall.py  pyproject.toml  start_bookrecall.bat  start_bookrecall.ps1
eval/: README.md  bookrecall_regression.example.jsonl
examples/: sample_book.txt  sample_entities.txt  sample_themes.txt  蛊真人_entities.txt  蛊真人_entities_auto.txt
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: App.vue  api.ts  routes.ts  styles.css  types.ts
frontend/src/components/: AgentTracePanel.vue  ErrorBanner.vue  KnowledgeList.vue  NavRail.vue  PageHeader.vue  RelationGraph.vue
frontend/src/pages/: ChatPage.vue  ImportPage.vue  IndexPage.vue  LibraryPage.vue  ModelPage.vue  SettingsPage.vue
src/bookrecall/: __init__.py  agent.py  answer_synthesis.py  answer_validation.py  chapter_summary.py  chunking.py  cli.py  cloud.py  config.py  dynamic_index.py  embeddings.py  entity_index.py  evaluation.py  index_pipeline.py  index_quality.py  local_llm.py  models.py  parser.py  query_understanding.py  rerank.py  retrieval.py  smart_index.py  storage.py  web.py
tests/: test_agent.py  test_agent_tools.py  test_answer_validation.py  test_chapter_summary.py  test_dynamic_index.py  test_embeddings.py  test_evaluation.py  test_events.py  test_local_llm.py  test_parser.py  test_policy_parse.py  test_query_understanding.py  test_relations.py  test_rerank.py  test_retrieval.py  test_retrieval_inverted.py  test_smart_index.py  test_themes.py  test_web.py
(+15 files in other folders)
